[package]
name = "reedbed-lib"
description = "numerical computations related to the approximation of thermal energy"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/reedbed"
readme = "../readme.md"
keywords = ["numerical-approximation", "scientific-computing"]
categories = ["Science", "Simulation", "Mathematics"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
rug = "1"

[dev-dependencies]
ctor = "0.2"
